# QMCRT

./: .gitignore  CMakeLists.txt  CompleteExampleRun.sh  README.md  main.cpp  readme.md
Buie_sunshape/data/: buie_sunshape_csr0.01_with_tonatiuh_calibration.csv  buie_sunshape_csr0.02_with_tonatiuh_calibration.csv  buie_sunshape_csr0.03_with_tonatiuh_calibration.csv  buie_sunshape_csr_0.01.csv  buie_sunshape_csr_0.02.csv  buie_sunshape_csr_0.03.csv
InputFiles/example/: example_configuration.json  example_scene.scn  example_scene_cylinder.scn
Normal_slope_error/data/: normal_slope_error_1mrad.csv  normal_slope_error_2mrad.csv  normal_slope_error_3mrad.csv
QuasiMonteCarloRayTracing/: CylinderReceiverRectGridRayTracing.cu  CylinderReceiverRectGridRayTracing.cuh  QuasiMonteCarloRayTracer.cpp  QuasiMonteCarloRayTracer.h  RayTracingArgumentStruct.h  RectangleReceiverRectGridRayTracing.cu  RectangleReceiverRectGridRayTracing.cuh
QuasiMonteCarloRayTracing/Grid/: rectGridDDA.cu  rectGridDDA.cuh
QuasiMonteCarloRayTracing/Receiver/: cylinderReceiverIntersection.cu  cylinderReceiverIntersection.cuh  receiverIntersectionUtil.cuh  rectangleReceiverIntersection.cu  rectangleReceiverIntersection.cuh
RayTracingPipeline/: CMakeLists.txt  RayTracingPipeline.cpp  RayTracingPipeline.h  TaskLoader.cpp  TaskLoader.h
Scene/: CMakeLists.txt  SceneConfiguration.cpp  SceneConfiguration.h  SceneLoader.cpp  SceneLoader.h  SceneProcessor.cpp  SceneProcessor.cu  SceneProcessor.h  SolarScene.cpp  SolarScene.h
Util/: check_cuda.h  destroy.h  global_constant.h  global_function.cuh
(+29 files in other folders)
